--- a/akreditasiAPP/App.config
+++ b/akreditasiAPP/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="akreditasiAPP.Properties.Settings.akreditasiConnectionString"
+            connectionString="Data Source=LAPTOP-Q3LDS42I;Initial Catalog=akreditasi;User ID=sa;Password=ayi240799"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
